apps/php-lindo/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: php-lindo
    backstage.io/kubernetes-id: php-lindo
    # istio-injection: enabled
  name: php-lindo
spec:
  finalizers:
  - kubernetes
