apps/php-lindo/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: php-lindo-stable
  namespace: php-lindo
  annotations:
    external-dns.alpha.kubernetes.io/hostname: php-lindo.diegoluisi.eti.br
  labels:
    app: php-lindo
    backstage.io/kubernetes-id: php-lindo
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: php-lindo

---
apiVersion: v1
kind: Service
metadata:
  name: php-lindo-canary
  namespace: php-lindo
  annotations:
    external-dns.alpha.kubernetes.io/hostname: php-lindo.diegoluisi.eti.br
  labels:
    app: php-lindo
    backstage.io/kubernetes-id: php-lindo
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: php-lindo
