apps/php-lindo/base/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: php-lindo-vsvc
  namespace: php-lindo
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - php-lindo.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: php-lindo-stable
      weight: 100
    - destination:
        host: php-lindo-canary
      weight: 0
